<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/con_layout_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_in_whole_app"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:isScrollContainer="true"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/logo_image_description"
            android:description="@string/logo_image_description"
            android:src="@drawable/profile_logo"
            app:civ_border_color="#FF000000"
            app:civ_border_width="3dp"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/sign_up_text"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <EditText
            android:id="@+id/name"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile" />

        <EditText
            android:id="@+id/password"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/age"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/age"
            android:imeActionLabel="Done"
            android:imeOptions="actionDone"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/agree"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/terms"
            android:textAlignment="center"
            android:textColor="@color/terms_color"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <Button
            android:id="@+id/signup_btn_sign_page"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="71dp" />

        <ImageView
            android:id="@+id/eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logo_image_description"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/password"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/eye" />

        <ImageView
            android:id="@+id/hide_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logo_image_description"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/password"
            app:srcCompat="@drawable/hide_eye" />

        <ImageView
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="12dp"
            android:background="@android:color/background_dark"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/logo_image_description"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@+id/profile"
            app:layout_constraintEnd_toEndOf="@+id/profile"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="@+id/profile"
            app:srcCompat="@drawable/edit" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>