<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/con_layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_in_whole_app"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:isScrollContainer="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:contentDescription="@string/logo_image_description"
            android:description="@string/logo_image_description"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <EditText
            android:id="@+id/name_login_page"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/password_login_page"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_login_page" />


        <Button
            android:id="@+id/login_btn_login_page"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="100dp" />

        <ImageView
            android:id="@+id/eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logo_image_description"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/password_login_page"
            app:layout_constraintEnd_toEndOf="@+id/password_login_page"
            app:layout_constraintTop_toTopOf="@+id/password_login_page"
            app:srcCompat="@drawable/eye" />

        <ImageView
            android:id="@+id/hide_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logo_image_description"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/password_login_page"
            app:layout_constraintEnd_toEndOf="@+id/password_login_page"
            app:layout_constraintTop_toTopOf="@+id/password_login_page"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/hide_eye" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>