<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_name"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_scrollview_for_linear_layout" />

        <ImageView
            android:id="@+id/profile_img_profile_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_image_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/profile_logo" />

        <TextView
            android:id="@+id/coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/coin_text"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_age" />

        <TextView
            android:id="@+id/profile_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_age"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <ImageView
            android:id="@+id/coin_gif"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logo_image_description"
            app:layout_constraintBottom_toBottomOf="@+id/coin"
            app:layout_constraintStart_toEndOf="@+id/coin"
            app:layout_constraintTop_toTopOf="@+id/coin"
            app:srcCompat="@drawable/coin" />

        <Button
            android:id="@+id/send_coin"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/send_coin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coin"
            app:layout_constraintVertical_bias="1.0" />

        <HorizontalScrollView
            android:id="@+id/horizontal_scrollview_for_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="2dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_img_profile_page">

            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/add_image1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/logo_image_description"
                    android:src="@drawable/add_image" />
                <!--

                <ImageView
                    android:id="@+id/add_image2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/logo_image_description"
                    android:src="@drawable/add_image" />

                <ImageView
                    android:id="@+id/add_image3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/logo_image_description"
                    android:src="@drawable/add_image" />

                <ImageView
                    android:id="@+id/add_image4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/logo_image_description"
                    android:src="@drawable/add_image" />
-->
            </LinearLayout>
        </HorizontalScrollView>

        <ImageView
            android:contentDescription="@string/logo_image_description"
            android:id="@+id/editprofileimage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="@+id/profile_img_profile_page"
            app:layout_constraintTop_toTopOf="@+id/profile_img_profile_page"
            app:srcCompat="@drawable/editprofileimage" />

        <!-- <ImageView
             android:id="@+id/down_arrow"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="40dp"
             android:layout_marginStart="8dp"
             android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@+id/horizontal_scrollview_for_linear_layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.552"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/down_arrow" />

         <ImageView
             android:id="@+id/up_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:contentDescription="@string/logo_image_description"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/down_arrow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/up_arrow" />-->
    </android.support.constraint.ConstraintLayout>
</ScrollView>